--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cottontail",
-  "version": "0.0.1-dev",
+  "version": "0.0.2",
   "description": "Runner for Cottontail",
   "keywords": [
     "cottontail",
